# Fullstack-Conference-Speakup

./: .gitignore
.github/workflows/: ci.yml  release.yml
Backend-conference-speakup/: .env.example  .gitignore  .prettierignore  Dockerfile  Makefile  README.md  commitlint.config.mjs  docker-compose.yaml  eslint.config.mjs  index.js  package-lock.json  package.json  skills.md  structure.md
Backend-conference-speakup/config/: constants.js  env.config.js  firebase-admin.config.js  prisma.js
Backend-conference-speakup/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secrets.yaml  service.yaml
Backend-conference-speakup/logs/: grafana.logs.js  logger.js  prometheus.logs.js  sentry.logs.js
Backend-conference-speakup/middlewares/: auth.middleware.js  errorhandler.middleware.js  helper.middleware.js  index.js  ratelimit.middleware.js  request-logger.middleware.js  security.middleware.js  validate.middleware.js
Backend-conference-speakup/nginx/: default.conf  nginx.conf
Backend-conference-speakup/prisma/: schema.prisma
Backend-conference-speakup/services/: ai-consumer.service.js  (+11 more)
Fastapi-conference-speakup/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  ochestration.md  pyproject.toml  requirements.txt  skills.md
Fastapi-conference-speakup/.github/workflows/: ci.yml
Fastapi-conference-speakup/alembic/: env.py
Fastapi-conference-speakup/app/: main.py
Fastapi-conference-speakup/app/api/v1/: router.py
Fastapi-conference-speakup/app/api/v1/endpoints/: agents.py  assistant.py  copilot.py  cv.py  emotion.py  health.py  mcp_tools.py  memory.py  speech.py  workflow.py
Fastapi-conference-speakup/app/core/: config.py  constants.py  exceptions.py  logging.py  security.py
Fastapi-conference-speakup/app/middleware/: request_logging.py
Fastapi-conference-speakup/app/schemas/: ai_schemas.py
Fastapi-conference-speakup/app/services/agents/: orchestrator.py
Fastapi-conference-speakup/app/services/assistant/: voice_commands.py
Fastapi-conference-speakup/app/services/copilot/: suggestions.py
Fastapi-conference-speakup/app/services/cv/: vision.py
Fastapi-conference-speakup/app/services/emotion/: analyzer.py
Fastapi-conference-speakup/app/services/llm/: providers.py  router.py
Fastapi-conference-speakup/app/services/mcp/: registry.py
Fastapi-conference-speakup/app/services/mcp/tools/: calendar_tool.py  email_tool.py  github_tool.py  integrations_tool.py  jira_tool.py  notion_tool.py  slack_tool.py
Fastapi-conference-speakup/app/services/memory/: meeting_memory.py
Fastapi-conference-speakup/app/services/openclaw/: bridge.py
Fastapi-conference-speakup/app/services/speech/: transcription.py
Fastapi-conference-speakup/app/services/workflow/: automation.py
Fastapi-conference-speakup/app/workers/: celery_app.py  event_handlers.py
Fastapi-conference-speakup/infrastructure/kafka/: consumers.py  producer.py
Fastapi-conference-speakup/infrastructure/neo4j/: client.py
Fastapi-conference-speakup/infrastructure/qdrant/: client.py
Fastapi-conference-speakup/infrastructure/redis/: client.py
Flutter-conference-speakup/: .env.example  .gitignore  Makefile  README.md  firebase.json  pubspec.yaml  skills.md
webapp-conference-speakup/: .gitignore  README.md  commitlint.config.mjs  next.config.ts  package-lock.json  package.json
(+389 files in other folders)
